--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,4 +18,4 @@ steps:
 - script: |
     npm install
     npm run build
-  displayName: 'npm install and the build'
+  displayName: 'npm install, build and test'
